--- a/pom.xml
+++ b/pom.xml
@@ -42,6 +42,11 @@
 			<artifactId>spring-ldap-ldif-batch</artifactId>
 			<version>2.3.8.RELEASE</version>
 		</dependency>
+		<dependency>
+			<groupId>org.apache.maven.plugins</groupId>
+			<artifactId>maven-deploy-plugin</artifactId>
+			<version>2.8.2</version>
+		</dependency>
 	</dependencies>
 
 	<build>
@@ -70,6 +75,11 @@
 				<artifactId>maven-project-info-reports-plugin</artifactId>
 				<version>3.3.0</version>
 			</plugin>
+			<!--<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-deploy-plugin</artifactId>
+				<version>2.8.2</version>
+			</plugin>-->
 		</plugins>
 	</build>
 
