--- a/pom.xml
+++ b/pom.xml
@@ -18,13 +18,13 @@
 		<java.version>18</java.version>
 	</properties>
 
-	<distributionManagement>
+	<!--<distributionManagement>
 		<repository>
 			<id>api1</id>
 			<name>FirstRestAPI</name>
 			<url>C:\Users\n.krastev\Documents\GitHub\FirstRestAPI\deploy</url>
 		</repository>
-	</distributionManagement>
+	</distributionManagement>-->
 
 	<dependencies>
 		<dependency>
@@ -69,8 +69,8 @@
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>3.10.1</version>
 				<configuration>
-					<source>1.8</source>
-					<target>1.8</target>
+					<source>15</source>
+					<target>15</target>
 				</configuration>
 			</plugin>
 			<plugin>
