--- a/pom.xml
+++ b/pom.xml
@@ -41,11 +41,6 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
-			<groupId>org.apache.maven.plugins</groupId>
-			<artifactId>maven-compiler-plugin</artifactId>
-			<version>3.10.1</version>
-		</dependency>
-		<dependency>
 			<groupId>com.querydsl</groupId>
 			<artifactId>codegen-utils</artifactId>
 			<version>5.0.0</version>
@@ -69,7 +64,7 @@
 				<artifactId>spring-boot-maven-plugin</artifactId>
 				<version>2.7.0</version>
 			</plugin>
-			<!--<plugin>
+			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>3.10.1</version>
@@ -77,7 +72,7 @@
 					<source>18</source>
 					<target>18</target>
 				</configuration>
-			</plugin>-->
+			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-site-plugin</artifactId>
